--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ html {
     scroll-behavior: smooth;
     box-sizing: border-box;
     font-size: 61.5%;
+    font-family: 'Tajawal', sans-serif;
 }
 
 body,
@@ -257,9 +258,13 @@ h3 {
     text-transform: uppercase;
     font-weight: 500;
     background-color: lightgrey;
-    padding: 1.2rem 4rem;
+    padding:0;
     border-radius:20px;
+    padding-top: 1rem;
+    padding-bottom:1rem;
+    
 }
+@media only screen and (max-width: 1024px) { .button { font-size: 1.3rem}}
 
 .hero__btn {
     color: white;
@@ -422,8 +427,12 @@ h3 {
 }
 
 .product {
+    display:flex;
     text-align: center;
     background-color: mistyrose;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .product__header {
@@ -719,4 +728,12 @@ h3 {
 
 ul li a{
 padding:10px;
+}
+
+uk-button uk-button-ganger{
+    background-color: gray;
+    font-family: 'Tajawal', sans-serif;
+    
+
+
 }
