--- a/style.css
+++ b/style.css
@@ -18,13 +18,12 @@ html {
     scroll-behavior: smooth;
     box-sizing: border-box;
     font-size: 61.5%;
-    font-family: 'Tajawal', sans-serif;
+   
 }
 
 body,
 input {
     position: relative;
-    
     font-size: 1.5rem;
     font-weight: 400;
     font-family: 'Tajawal', sans-serif;
@@ -43,7 +42,7 @@ a {
 ul,
 li {
     list-style: none;
-    padding:10px;
+
 }
 
 h2,
@@ -74,7 +73,7 @@ h3 {
 .header {
     position: relative;
     height: 100vh;
-    background-color: var(--primaryColor);
+    background-color: white;
 }
 
 .nav {
@@ -84,7 +83,8 @@ h3 {
 
 .logo h1 {
     font-size: 4rem;
-    color: gray;
+    color:gray;
+    font-weight: 500;
 }
 
 .cart svg {
@@ -111,19 +111,21 @@ h3 {
 .nav__menu {
     width: 50%;
     
+    
 }
 
 .nav__list {
     display: flex;
-    width: 50%;
-    font-size: 1.5rem;
+    width: 70%;
+    padding:20px;
+    
+    
     
     
 }
 
-.nav__item:last-child {
-    margin-right: .5rem;
-}
+
+
 
 .button {
     display: inline-block;
@@ -156,7 +158,7 @@ h3 {
         padding: 3rem 0;
         width: 30rem;
         height: 100%;
-        background-color: var(--white);
+        background-color: white;
         z-index: 50;
         transition: all 300ms ease-in-out;
     }
@@ -164,6 +166,7 @@ h3 {
     .nav__item {
         width: 100%;
         margin: 1rem 0;
+        padding: 1rem;
     }
 
     .nav__item:last-child {
@@ -242,6 +245,7 @@ h3 {
     color: var(--default);
     font-size: 7rem;
     margin-bottom: 1.6rem;
+    font-family: 'Permanent Marker', cursive;
 }
 
 .hero__left p {
@@ -550,7 +554,7 @@ h3 {
 .category .category__btn {
     background-color: gray;
     padding: 1rem 3rem;
-    color: var(--white);
+    color: white;
     border-radius: 5rem;
     border: 1px solid var(--default);
     transition: all 300ms ease-in-out;
