--- a/style.css
+++ b/style.css
@@ -1,10 +1,4 @@
-:root {
-    --white: #fff;
-    --primaryColor: #f1f1f1;
-    --default: #4a1667;
-    --dark-color: #222;
-    --black: #000;
-}
+
 
 *,
 *::after,
@@ -85,6 +79,7 @@ h3 {
     font-size: 4rem;
     color:gray;
     font-weight: 500;
+    font-family: 'Pacifico', cursive;
 }
 
 .cart svg {
@@ -242,7 +237,7 @@ h3 {
 }
 
 .hero__left h1 {
-    color: var(--default);
+    color: #4a1667;
     font-size: 7rem;
     margin-bottom: 1.6rem;
     font-family: 'Permanent Marker', cursive;
@@ -411,24 +406,7 @@ h3 {
     justify-content: center;
 }
 
-.product__header svg {
-    width: 3rem;
-    height: 3rem;
-}
 
-.product__header span {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    background-color: var(--primaryColor);
-    border-radius: 50%;
-    padding: 1rem;
-    transform: translate(-50%, -50%);
-    visibility: hidden;
-    z-index: 6;
-    opacity: 1;
-    transition: all 300ms ease-in-out;
-}
 
 .product {
     display:flex;
@@ -437,20 +415,20 @@ h3 {
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: center;
-}
-
-.product__header {
     position: relative;
     padding: .5rem;
+    
 }
 
-.product__header {
+
+img {
+    object-fit: contain;
+    position: relative;
+    padding: .5rem;
     height: 20rem;
 }
 
-.product__header img {
-    object-fit: contain;
-}
+
 
 .product__header::after {
     content: "";
@@ -556,7 +534,7 @@ h3 {
     padding: 1rem 3rem;
     color: white;
     border-radius: 5rem;
-    border: 1px solid var(--default);
+    border: 1px solid #4a1667;
     transition: all 300ms ease-in-out;
 }
 
@@ -595,7 +573,7 @@ h3 {
         background-color: gray;
         font-size: 1.4rem;
         padding: 1rem 2rem;
-        color: var(--white);
+        color: white;
     }
 }
 
